argo/flask-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    # הסר את השורה הבאה, כי היא קשורה ל-SSL
    # alb.ingress.kubernetes.io/ssl-redirect: '443'
    # אם אתה לא רוצה external-dns, אפשר למחוק או להשאיר
    # external-dns.alpha.kubernetes.io/hostname: "www.saharbittman.com"
spec:
  rules:
  - host: www.saharbittman.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: flask-app-service
              port:
                number: 5000
